0.1.1

  User-visible:
   * Added support for new cclive options --stream-exec and --stream (0.2.4+)
   * Added missing statusbar tips


0.1.0
(March 1, 2009)

  * Initial release